--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^17.0.18",
     "fastify": "^3.27.2",
     "fastify-static": "^4.5.0",
+    "fastify-swagger": "^4.15.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
