--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "start": "node ./build/main.js",
     "build": "tsc",
     "dev": "ts-node-dev ./src/main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "mikro-orm migration:up"
   },
   "author": "",
   "license": "ISC",
@@ -19,13 +19,23 @@
     "@tsconfig/node16-strictest": "^1.0.0",
     "@types/json-schema": "^7.0.9",
     "@types/node": "^17.0.18",
+    "cuid": "^2.1.8",
     "fastify": "^3.27.2",
+    "fastify-plugin": "^3.0.1",
     "fastify-static": "^4.5.0",
     "fastify-swagger": "^4.15.0",
+    "http-status-codes": "^2.2.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
     "ts-node-dev": "^1.1.8"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./build/mikro-orm.config.js"
+    ]
   }
 }
