--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,6 +7,6 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false
   },
-  "include": ["./src"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
